tooling/nargo_cli/tests/snapshots/execution_success/witness_compression/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/81T0QrDIAzUurHtee1/JFXb+NZfmcz+/yeMMYWgvi2FHsiJkfMSTq1+MHl9ccmsVYsh85YZ/gNyLQuLc2mdE1p8wRwieXA+LoSEnvx7JmsTOVpDDCsEdDbh7oPds5iW8wW8d3Nk80Z4AIYZl9JVnWFIap8wADgo2TD1PpVmrKuM8fqj4onVjWDPRX88Rh9uqsXE9mPVJ5/FJuSh6JUcX1WLoaqVu/fKn5b3h7UX03mr4Jl5ZGdlnh/yukJs2QUAAA==",
  "debug_symbols": "jZDRCoMwDEX/Jc99qHOC81fGkKpRCqEtsR0M8d8XRTd9GOylaXJ7bsmdoMMmDbV1vR+huk/QsCWyQ02+NdF6J9NpVrC3dWREGcFBFyoYRhehcolIwdNQWh+Nwbi1RsOiagXoOqli2FvC5TarL61/o3l52eC8LD948T9/Kzb+qvWJf0hnWsunjUFDlSnI5JwXU7amIdyy6JNrD9HEV9iVPbzAvsUuMS6mqybfvAE=",
  "file_map": {
    "50": {
      "source": "// This test should be used to regenerate the serialized witness used in the `acvm_js` integration tests.\n// The `acvm_js` test file containing the serialized witness should be also called `witness_compression`.\n// After recompiling Noir, you can manually print the witness byte array to be written to file after execution.\nfn main(x: Field, y: pub Field) -> pub Field {\n    assert(x != y);\n    x + y\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_invert"
  ]
}
